# zawjati

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: chat.py  config.py  llm.py  main.py  memory.py  middleware.py  models.py  prompts.py  router.py  tools.py  websocket_manager.py
backend/app/api/: chat.py  deps.py  router.py
backend/app/core/: chat.py  personality.py  prompt_builder.py  retrieval.py
backend/app/llm/: __init__.py  anthropic.py  base.py  gemini.py  groq.py  ollama.py  openai.py  openrouter.py
backend/app/observability/: logger.py  metrics.py
backend/app/store/: base.py  conversation.py  episodic.py  long_term.py  profile.py  semantic.py
backend/app/tools/: base.py  calculator.py  image_gen.py  notes.py  registry.py  reminders.py  search.py  weather.py
backend/prompts/: base.md  personality.md  safety.md  system_prompt.md
backend/prompts/personalities/: assistant.md  friend.md  therapist.md  wife.md
backend/prompts/profiles/: gentle.md  playful.md
docs/: api.md  architecture.md  deployment.md  release.md  roadmap.md  troubleshooting.md
tests/: test_api.py  test_chat.py  test_conversation_qa.py  test_llm.py  test_memory.py  test_models.py  test_offline.py  test_performance.py  test_personality.py  test_prompt_builder.py  test_retrieval.py  test_security.py  test_tools.py  test_websocket.py
(+351 files in other folders)
